<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feedbackErrorBuscador">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="267dp"
        android:layout_height="198dp"
        android:layout_marginTop="108dp"
        android:contentDescription="Imagen de error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/errorbuscador" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/text_losiento_feedback_error"
        android:textColor="@color/color3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/text_noencuentrolibros_feedback_error"
        android:textColor="@color/dark_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <Button
        android:id="@+id/button7"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue_soft"
        android:text="@string/button_volver_feedback_error"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />


</androidx.constraintlayout.widget.ConstraintLayout>