<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="284dp"
        android:layout_height="284dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/register_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="NotSibling">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="335dp"
            android:layout_height="40dp"
            android:layout_margin="48dp"
            android:inputType="text"
            android:textSize="30px"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="606dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Te invitamos a formar parte de nuestra comunidad."
        android:textColor="#626364"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:hint="@string/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="NotSibling">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="335dp"
            android:layout_height="40dp"
            android:layout_margin="48dp"
            android:inputType="text"
            android:textSize="30px"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="606dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="444dp"
        android:layout_height="59dp"
        android:layout_marginTop="132dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="NotSibling">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="335dp"
            android:layout_height="40dp"
            android:layout_margin="48dp"
            android:inputType="text"
            android:textSize="30px"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="606dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#538DCC"
        android:text="Crear cuenta"
        android:textAllCaps="false"
        android:textColor="#FCFEFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />


</androidx.constraintlayout.widget.ConstraintLayout>